[package]
name = "logs-narrator"
version = "0.4.0"
authors = ["Arnaud Gourlay <arnaud.gourlay@gmail.com>"]
description = "Merge logs to tell a story"
repository = "https://github.com/agourlay/logs-narrator"
license = "Apache-2.0"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["logs", "merger"]
edition = "2021"

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
chrono = "0.4.35"
colored = "2.1.0"
regex = "1.10.3"
